22-Learning-Path/labs/build/L13-k8s-temel/starter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab
